[gd_scene load_steps=4 format=3 uid="uid://b5ak6j46yrf7q"]

[ext_resource type="Script" uid="uid://dyo8qy5p63hgy" path="res://scenes/ui/sleep_dialog/SleepDialog.gd" id="1_8ps7y"]
[ext_resource type="Script" uid="uid://bsryqch34yvow" path="res://scenes/ui/sleep_dialog/Ticks.gd" id="2_0b207"]
[ext_resource type="Theme" uid="uid://cr0rfif15yltt" path="res://ui/theme/MotifTheme.tres" id="3_theme"]

[node name="SleepDialog" type="ConfirmationDialog"]
title = "Sleep"
initial_position = 1
size = Vector2i(600, 220)
min_size = Vector2i(560, 200)
theme = ExtResource("3_theme")
script = ExtResource("1_8ps7y")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 12.0
offset_right = -16.0
offset_bottom = -56.0
pivot_offset = Vector2(-16, -16)
theme_override_constants/separation = 12

[node name="NowLbl" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Row" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Cap" type="Label" parent="VBoxContainer/Row"]
layout_mode = 2
text = "Sleep for:"

[node name="Slider" type="HSlider" parent="VBoxContainer/Row"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 48.0
value = 16.0

[node name="Ticks" type="Control" parent="VBoxContainer/Row/Slider"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_0b207")

[node name="AmountLbl" type="Label" parent="VBoxContainer/Row"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
size_flags_horizontal = 8
horizontal_alignment = 2

[node name="TargetLbl" type="Label" parent="VBoxContainer"]
layout_mode = 2
